# SATOR

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  NOTICE  README.md  docker-compose.yml  pyproject.toml  requirements-cuda.txt  requirements.txt
.github/workflows/: ci.yml
docs/: 01-overview.md  02-quickstart.md  03-installation.md  04-configuration.md  05-api-reference.md  06-objectives-and-constraints.md  07-optimization-pipeline.md  08-advanced-tuning.md  09-reconstruction.md  10-operations.md  11-local-https-setup.md  12-troubleshooting.md  13-examples.md  README.md  openapi.yaml
examples/: _common.py  _render_smoke.py  demo_01_rosenbrock_single_min.py  demo_02_ackley_target.py  demo_03_himmelblau_within_range.py  demo_04_zdt1_pareto.py  demo_05_mixture_sum_constraint.py  demo_06_ratio_constraints.py  demo_07_paint_formulation.py  demo_08_ev_electrolyte_target.py  demo_09_pharma_tablet_pca.py  demo_10_cosmetic_emulsion.py  how_to_run_examples.md
sator_os_engine/: settings.py
sator_os_engine/api/: app.py  deps.py  errors.py
sator_os_engine/api/routes/: jobs.py  optimize.py  (+1 more)
sator_os_engine/encoding/: pca.py
sator_os_engine/observability/: __init__.py  logging.py  metrics.py
sator_os_engine/reconstruction/: slsqp_reconstructor.py
sator_os_engine/runtime/: async_tasks.py  executor.py  jobs.py
sator_os_engine/security/: api_keys.py  client_ip.py  idempotency.py  ip_filters.py  rate_limit.py
sator_os_engine/server/: main.py
tests/integration/: test_api_endpoints.py  test_health_and_auth.py
tests/system/: test_visualization_surface.py
tests/unit/: test_acquisition_multi.py  test_acquisition_name_dispatch.py  test_acquisition_single.py  test_client_ip.py  test_constraints_enforcement.py  test_enforced_goals.py  test_engine_orchestrator.py  test_error_paths.py  test_gp_models_and_bounds.py  test_maps.py  test_metrics_and_sweep.py  test_mo_goals_pca.py  test_preprocess_pca.py  test_scaled_pca.py  test_slsqp_reconstructor.py  test_torch_device_resolve.py  test_utils_constraints.py
(+9 files in other folders)
