[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sator-os-engine"
version = "0.2.1"
description = "Stateless multi-objective Bayesian optimization server with a simple HTTP API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Sysnoid Technologies Oy" }]
# Keep in sync with requirements.txt; CPU PyTorch is the default (PyPI or PyTorch CPU index).
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "structlog>=24.1.0",
  "prometheus-client>=0.20.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "torch>=2.2.0",
  "botorch>=0.10.0",
  "gpytorch>=1.11.0",
  "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
# Install tests: pip install -e ".[dev]"
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
  "vulture>=2.11",
]
# GPU: PyTorch with CUDA is not a normal PyPI extra. Use `requirements-cuda.txt` or
# the Docker GPU image; see docs/03-installation.md.

[project.scripts]
sator-server = "sator_os_engine.server.main:run"

[project.urls]
Repository = "https://github.com/Sysnoid/SATOR"

[tool.setuptools.packages.find]
where = ["."]
include = ["sator_os_engine*"]

# Ruff: `ruff check sator_os_engine tests` and `ruff format sator_os_engine tests`
[tool.ruff]
target-version = "py310"
line-length = 120
src = ["sator_os_engine", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]
ignore = [
  "B008",  # function call in default arg — common in FastAPI Depends
  "B904",  # raise from — optional style in some handlers
  "E501",  # line length — trust formatter + 120; fix obvious cases only
]

[tool.ruff.lint.isort]
known-first-party = ["sator_os_engine"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
